# CryptopalsChallenges

./: CMakeLists.txt  README.md
files/: set_1_challenge_8.txt
include/: conversion.h  decoding.h  encoding.h  set_1.h  set_2.h  utilities.h
src/: conversion.cpp  decoding.cpp  encoding.cpp  main.cpp  set_1.cpp  set_2.cpp  utilities.cpp
test/: base64_decoding_tests.cpp  base64_encoding_tests.cpp  conversion_tests.cpp  utilities_tests.cpp
test/set_1/: set_1_tests.cpp
test/set_2/: set_2_tests.cpp
